force-app/main/default/objects/Financial_Holding__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Financial Account</label>
    <type>Lookup</type>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Account Holdings</relationshipLabel>
    <relationshipName>Account_Holdings</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField> 