force-app/main/default/objects/Financial_Holding__c/fields/Holding_Value__c.field-meta.xml
<CustomField>
    <fullName>Holding_Value__c</fullName>
    <label>Holding Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>Shares__c * Security__r.FinServ__Price__c</formula>
    <description>Calculated value of the holding (Shares * Security Price)</description>
</CustomField> 