force-app/main/default/objects/Financial_Holding__c/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <label>Security</label>
    <type>Lookup</type>
    <referenceTo>FinServ__Securities__c</referenceTo>
    <relationshipLabel>Security Holdings</relationshipLabel>
    <relationshipName>Security_Holdings</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField> 