force-app/main/default/objects/Financial_Holding__c/fields/Shares__c.field-meta.xml
<CustomField>
    <fullName>Shares__c</fullName>
    <label>Shares</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>8</scale>
    <required>true</required>
    <description>Number of shares held</description>
</CustomField> 